fix overlay backdrop spilling out of styleguide

--- a/styles/styleguide.less
+++ b/styles/styleguide.less
@@ -3,14 +3,13 @@
   padding: @component-padding 0; // stops jumping of the title when collapsing
 }
 
-.styleguide .overlay:after {
+.styleguide atom-panel.modal:after {
   position: absolute;  // prevent overlay backdrop from leaking outside
   left: -@component-padding/2;
   right: -@component-padding/2;
   bottom: -@component-padding/2;
 }
-
-.styleguide .overlay:after {
+.styleguide .atom-panel.modal:after {
   position: absolute;  // prevent overlay backdrop from leaking outside
 }
 
